testcases/error/invalid_cast.veryl
module invalid_cast {
    let a : clock = 0;
    let _b: reset = (a as reset);
}
